--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -112,6 +112,8 @@
   </div>
 </section>
 
+{% comment %} alert {% endcomment %}
+{% include '_alert.html' %} 
 <!-- Listings -->
 <section id="listings" class="py-5">
   <div class="container">
