--- a/main/templates/register.html
+++ b/main/templates/register.html
@@ -1,78 +1,162 @@
-{% extends "base.html" %} {% block content %} {% load static %}
-<section id="register" class="bg-light py-5">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-6 mx-auto">
-        <div class="card">
-          <div class="card-header bg-primary text-white">
-            <h4><i class="fas fa-user-plus"></i> Register</h4>
-          </div>
-          <div class="card-body">
-            <form action="index.html">
-              <div class="form-group">
-                <label for="first_name">First Name</label>
-                <input
-                  type="text"
-                  name="first_name"
-                  class="form-control"
-                  required
-                />
-              </div>
-              <div class="form-group">
-                <label for="last_name">Last Name</label>
-                <input
-                  type="text"
-                  name="last_name"
-                  class="form-control"
-                  required
-                />
-              </div>
-              <div class="form-group">
-                <label for="username">Username</label>
-                <input
-                  type="text"
-                  name="username"
-                  class="form-control"
-                  required
-                />
-              </div>
-              <div class="form-group">
-                <label for="email">Email</label>
-                <input
-                  type="email"
-                  name="email"
-                  class="form-control"
-                  required
-                />
-              </div>
-              <div class="form-group">
-                <label for="password2">Password</label>
-                <input
-                  type="password"
-                  name="password"
-                  class="form-control"
-                  required
-                />
-              </div>
-              <div class="form-group">
-                <label for="password">Confirm Password</label>
-                <input
-                  type="password"
-                  name="password2"
-                  class="form-control"
-                  required
-                />
-              </div>
-              <input
-                type="submit"
-                value="Register"
-                class="btn btn-secondary btn-block"
-              />
-            </form>
-          </div>
-        </div>
+{% load static %}
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+
+    <!-- Bootstrap CSS -->
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+      crossorigin="anonymous"
+    />
+
+    <style>
+      html,
+      body {
+        height: 100%;
+      }
+
+      body {
+        display: -ms-flexbox;
+        display: flex;
+        -ms-flex-align: center;
+        align-items: center;
+        padding-top: 40px;
+        padding-bottom: 40px;
+        background: url("{% static 'img/showcase.jpg' %}");
+      }
+
+      .form-signin {
+        width: 100%;
+        max-width: 330px;
+        padding: 15px;
+        margin: auto;
+      }
+
+      .form-signin .checkbox {
+        font-weight: 400;
+      }
+
+      .form-signin .form-control {
+        margin: 16px 3px;
+        position: relative;
+        box-sizing: border-box;
+        height: auto;
+        padding: 10px;
+        font-size: 16px;
+      }
+
+      .form-signin .form-control:focus {
+        z-index: 2;
+      }
+
+      .form-signin input[type="email"] {
+        margin-bottom: -1px;
+        border-bottom-right-radius: 0;
+        border-bottom-left-radius: 0;
+      }
+
+      .form-signin input[type="password"] {
+        margin-bottom: 10px;
+        border-top-left-radius: 0;
+        border-top-right-radius: 0;
+      }
+
+      .bd-placeholder-img {
+        font-size: 1.125rem;
+        text-anchor: middle;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+      }
+
+      @media (min-width: 768px) {
+        .bd-placeholder-img-lg {
+          font-size: 3.5rem;
+        }
+      }
+    </style>
+    <!-- Custom styles for this template -->
+    <link href="signin.css" rel="stylesheet" />
+  </head>
+
+  <body class="text-center">
+    <form class="form-signin" method="POST">
+      {% csrf_token %}
+      <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+      <label for="inputEmail" class="sr-only">first_name</label>
+      <input
+        type="text"
+        id="inputEmail"
+        name="first_name"
+        class="form-control"
+        placeholder="first name"
+        required
+        autofocus
+      />
+      <label for="inputEmail" class="sr-only">last_name</label>
+      <input
+        type="text"
+        id="inputEmail"
+        name="last_name"
+        class="form-control"
+        placeholder="last name"
+        required
+        autofocus
+      />
+      <label for="inputEmail" class="sr-only">Username</label>
+      <input
+        type="text"
+        id="inputEmail"
+        name="username"
+        class="form-control"
+        placeholder="Username"
+        required
+        autofocus
+      />
+      <label for="inputEmail" class="sr-only">Email</label>
+      <input
+        type="text"
+        id="inputEmail"
+        name="email"
+        class="form-control"
+        placeholder="Email"
+        required
+      />
+      <label for="inputPassword" class="sr-only">Password</label>
+      <input
+        type="password"
+        id="inputPassword"
+        name="password"
+        class="form-control"
+        placeholder="Password"
+        required
+      />
+      <label for="inputPassword" class="sr-only">Password</label>
+      <input
+        type="password"
+        id="inputPassword"
+        name="password2"
+        class="form-control"
+        placeholder="Conform Password"
+        required
+      />
+      <div class="checkbox mb-3">
+        <label>
+          <input type="checkbox" value="remember-me" /> Remember me
+        </label>
       </div>
-    </div>
-  </div>
-</section>
-{% endblock content %}
+      <button class="btn btn-lg btn-primary btn-block" type="submit">
+        Sign in
+      </button>
+    </form>
+  </body>
+</html>
