Implemented Dashboard, Fixed minor bugs, First iteration Complete!

--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -13,7 +13,7 @@
     <!-- lightbox -->
     <link rel="stylesheet" href="{% static 'css/lightbox.min.css' %}" />
 
-    <title>ExplorerInns</title>
+    <title>ExplorerInns | {% block title %}{% endblock title %}</title>
   </head>
 
   <body>
