--- a/main/templates/search.html
+++ b/main/templates/search.html
@@ -1,7 +1,11 @@
 {% extends "base.html" %}
-{% block content %}
 {% load static %}
 {% load humanize %}
+{% block title %}
+Search
+{% endblock title %}
+
+{% block content %}
 
 <section id="showcase-inner" class="showcase-search text-white py-5">
   <div class="container">
