--- a/main/templates/_alert.html
+++ b/main/templates/_alert.html
@@ -1,17 +1,17 @@
-{% if messages %} {% for message in message %}
+{% if messages %} {% for message in messages %}
 <div id="message" class="container">
   <div
-    class="alert alert-{{message.tags}} alert-dismissible text-center"
+    class="alert alert-{{ message.tags }} alert-dismissible text-center"
     role="alert"
   >
     <button class="close" type="button" data-dismiss="alert">
-      <span aira-hidden="true"> &times; </span>
+      <span aria-hidden="true"> &times; </span>
     </button>
     <strong>
-      {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %} Error {% else %}
-      {{message.tags | title }} {% endif %}
+      {% if message.level == messages.DEFAULT_MESSAGE_LEVELS.ERROR %} Error {%
+      else %} {{ message.tags | title }} {% endif %}
     </strong>
-    {{message}}
+    {{ message }}
   </div>
 </div>
 {% endfor %} {% endif %}
