--- a/main/templates/about_us.html
+++ b/main/templates/about_us.html
@@ -1,4 +1,7 @@
-{% extends "base.html" %} {% block content %} {% load static %}
+{% extends "base.html" %} {% load static %} 
+{% block title %}
+About Us
+{% endblock title %} {% block content %}
 <section id="about" class="py-4">
   <div class="container">
     <div class="row">
