--- a/main/templates/listing.html
+++ b/main/templates/listing.html
@@ -1,4 +1,5 @@
-{% extends "base.html" %} {% block content %} {% load static %} {% load humanize %}
+{% extends "base.html" %}{% load static %} {% load humanize %} {% block title %}
+Listing {% endblock title %} {% block content %}
 
 <section id="showcase-inner" class="py-5 text-white">
   <div class="container">
@@ -35,6 +36,7 @@
 
 <!-- Listing -->
 <section id="listing" class="py-4">
+  {% include "_alert.html" %}
   <div class="container">
     <a href="{% url 'listings' %}" class="btn btn-light mb-4"
       >Back To Listings</a
@@ -198,12 +200,24 @@
         </button>
       </div>
       <div class="modal-body">
-        <form>
+        <form action="{% url 'contact' %}" method="POST">
+          {% csrf_token %} {% if user.is_authenticated %}
+          <input type="hidden" name="user_id" value="{{ user.id }}" />
+          {% else %}
+          <input type="hidden" name="user_id" value="0" />
+          {% endif %}
+          <input
+            type="hidden"
+            name="realtor_email"
+            value="{{ listing.realtor.email }}"
+          />
+          <input type="hidden" name="listing_id" value="{{ listing.id }}" />
+          <input type="hidden" name="listing" value="{{ listing.title }}" />
           <div class="form-group">
             <label for="property_name" class="col-form-label">Property:</label>
             <input
               type="text"
-              name="listing"
+              name="listing_display"
               class="form-control"
               value="{{ listing.title }}"
               disabled
@@ -211,11 +225,23 @@
           </div>
           <div class="form-group">
             <label for="name" class="col-form-label">Name:</label>
-            <input type="text" name="name" class="form-control" required />
+            <input
+              type="text"
+              name="name"
+              class="form-control"
+              {% if user.is_authenticated %} value="{{ user.username }}" {% endif %}
+              required
+            />
           </div>
           <div class="form-group">
             <label for="email" class="col-form-label">Email:</label>
-            <input type="email" name="email" class="form-control" required />
+            <input
+              type="email"
+              name="email"
+              class="form-control"
+              {% if user.is_authenticated %} value="{{ user.email }}" {% endif %}
+              required
+            />
           </div>
           <div class="form-group">
             <label for="phone" class="col-form-label">Phone:</label>
