--- a/main/templates/listings.html
+++ b/main/templates/listings.html
@@ -1,5 +1,5 @@
-{% extends "base.html" %} {% block content %} {% load static %} {% load humanize %}
-
+{% extends "base.html" %}{% load static %} {% load humanize %} {% block title %}
+Browse Listings {% endblock title %} {% block content %}
 <section id="showcase-inner" class="py-5 text-white">
   <div class="container">
     <div class="row text-center">
