--- a/main/templates/listings.html
+++ b/main/templates/listings.html
@@ -43,7 +43,7 @@ Browse Listings {% endblock title %} {% block content %}
           <div class="card-img-overlay">
             <h2>
               <span class="badge badge-secondary text-white"
-                >${{ listing.price | intcomma }}</span
+                >₹{{ listing.price | intcomma }}</span
               >
             </h2>
           </div>
@@ -103,43 +103,43 @@ Browse Listings {% endblock title %} {% block content %}
     <div class="row">
       <div class="col-md-12">
         {% if listings.has_other_pages %}
-          <ul class="pagination">
-            {% if listings.has_previous %}
-              <li class="page-item">
-                <a class="page-link" href="?page={{ listings.previous_page_number }}">&laquo;</a>
-              </li>
-            {% else %}
-              <li class="page-item disabled">
-                <a class="page-link">&laquo;</a>
-              </li>
-            {% endif %}
-            
-            {% for num in listings.paginator.page_range %}
-              {% if listings.number == num %}
-                <li class="page-item active">
-                  <a class="page-link">{{ num }}</a>
-                </li>
-              {% else %}
-                <li class="page-item">
-                  <a class="page-link" href="?page={{ num }}">{{ num }}</a>
-                </li>
-              {% endif %}
-            {% endfor %}
-            
-            {% if listings.has_next %}
-              <li class="page-item">
-                <a class="page-link" href="?page={{ listings.next_page_number }}">&raquo;</a>
-              </li>
-            {% else %}
-              <li class="page-item disabled">
-                <a class="page-link">&raquo;</a>
-              </li>
-            {% endif %}
-          </ul>
+        <ul class="pagination">
+          {% if listings.has_previous %}
+          <li class="page-item">
+            <a
+              class="page-link"
+              href="?page={{ listings.previous_page_number }}"
+              >&laquo;</a
+            >
+          </li>
+          {% else %}
+          <li class="page-item disabled">
+            <a class="page-link">&laquo;</a>
+          </li>
+          {% endif %} {% for num in listings.paginator.page_range %} {% if
+          listings.number == num %}
+          <li class="page-item active">
+            <a class="page-link">{{ num }}</a>
+          </li>
+          {% else %}
+          <li class="page-item">
+            <a class="page-link" href="?page={{ num }}">{{ num }}</a>
+          </li>
+          {% endif %} {% endfor %} {% if listings.has_next %}
+          <li class="page-item">
+            <a class="page-link" href="?page={{ listings.next_page_number }}"
+              >&raquo;</a
+            >
+          </li>
+          {% else %}
+          <li class="page-item disabled">
+            <a class="page-link">&raquo;</a>
+          </li>
+          {% endif %}
+        </ul>
         {% endif %}
       </div>
     </div>
-    
   </div>
 </section>
 {% endblock content %}
