--- a/main/templates/search.html
+++ b/main/templates/search.html
@@ -119,7 +119,7 @@ Search
             />
             <div class="card-img-overlay">
               <h2>
-                <span class="badge badge-secondary text-white">${{ listing.price | intcomma }}</span>
+                <span class="badge badge-secondary text-white">₹{{ listing.price | intcomma }}</span>
               </h2>
             </div>
             <div class="card-body">
