--- a/main/templates/listings.html
+++ b/main/templates/listings.html
@@ -116,8 +116,8 @@ Browse Listings {% endblock title %} {% block content %}
           <li class="page-item disabled">
             <a class="page-link">&laquo;</a>
           </li>
-          {% endif %} {% for num in listings.paginator.page_range %} {% if
-          listings.number == num %}
+          {% endif %} {% for num in listings.paginator.page_range %} 
+          {% if listings.number == num %}
           <li class="page-item active">
             <a class="page-link">{{ num }}</a>
           </li>
