--- a/main/templates/dashboard.html
+++ b/main/templates/dashboard.html
@@ -1,5 +1,4 @@
-{% extends "base.html" %} {% block title %} Dashboard {% endblock title %} 
-{% block content %}
+{% extends "base.html" %} {% block title %} Dashboard {% endblock title %} {% block content %}
 <section id="showcase-inner" class="py-5 text-white">
   <div class="container">
     <div class="row text-center">
@@ -17,7 +16,7 @@
     <nav aria-label="breadcrumb">
       <ol class="breadcrumb">
         <li class="breadcrumb-item">
-          <a href="{% url 'home' %}"> <i class="fas fa-home"></i> Home</a>
+          <a href="{% url 'home' %}"><i class="fas fa-home"></i> Home</a>
         </li>
         <li class="breadcrumb-item active">Dashboard</li>
       </ol>
@@ -29,7 +28,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <h2>{{user.first_name}}</h2>
+        <h2>{{ user.first_name }}</h2>
         {% if contacts %}
         <p>Here are the property listings that you have inquired about</p>
         <table class="table">
@@ -43,13 +42,23 @@
           <tbody>
             {% for contact in contacts %}
             <tr>
-              <td>{{contact.id}}</td>
-              <td>{{contact.listing}}</td>
+              <td>{{ contact.id }}</td>
+              <td>{{ contact.listing }}</td>
               <td>
                 <a
                   class="btn btn-light"
-                  href="{% url 'listing' contact.listing_id%}"
+                  href="{% url 'listing' contact.listing_id %}"
                   >View Listing</a
+                >
+                <a
+                  class="btn btn-primary"
+                  href="{% url 'update_listing' contact.listing_id %}"
+                  >Update</a
+                >
+                <a
+                  class="btn btn-danger"
+                  href="{% url 'delete_listing' contact.listing_id %}"
+                  >Delete</a
                 >
               </td>
             </tr>
@@ -59,6 +68,8 @@
         {% else %}
         <p>You have not inquired about any properties yet</p>
         {% endif %}
+        <a href="{% url 'add_listing' %}" class="btn btn-primary">Add Listing</a>
+        <a href="{% url 'add_realtor' %}" class="btn btn-primary">Add Realtor</a>
       </div>
     </div>
   </div>
