Finalized the Design! First Iteration Done!!

--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -7,8 +7,7 @@ Welcome {% endblock title %} {% block content %}
       <div class="col-md-12">
         <h1 class="display-4">About ExplorerInns</h1>
         <p class="lead">
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sunt,
-          pariatur!
+          Discover the perfect place to call home with our extensive listings and expert guidance.
         </p>
       </div>
     </div>
@@ -42,9 +41,7 @@ Welcome {% endblock title %} {% block content %}
       <div class="overlay p-5">
         <h1 class="display-4 mb-4">Property Searching Just Got So Easy</h1>
         <p class="lead">
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Recusandae
-          quas, asperiores eveniet vel nostrum magnam voluptatum tempore!
-          Consectetur, id commodi!
+          Our platform simplifies the property search process, helping you find your ideal home with ease.
         </p>
         <div class="search">
           <form action="{% url 'search' %}">
@@ -197,9 +194,8 @@ Welcome {% endblock title %} {% block content %}
         <hr />
         <h3>Consulting Services</h3>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt,
-          debitis nam! Repudiandae, provident iste consequatur hic dignissimos
-          ratione ea quae.
+          We offer expert consulting services to help you
+           make informed decisions in your property search and investment.
         </p>
       </div>
       <div class="col-md-4">
@@ -207,9 +203,8 @@ Welcome {% endblock title %} {% block content %}
         <hr />
         <h3>Propery Management</h3>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt,
-          debitis nam! Repudiandae, provident iste consequatur hic dignissimos
-          ratione ea quae.
+          Our property management services ensure that your
+           investment is well-maintained and yields the best returns.
         </p>
       </div>
       <div class="col-md-4">
@@ -217,9 +212,8 @@ Welcome {% endblock title %} {% block content %}
         <hr />
         <h3>Renting & Selling</h3>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt,
-          debitis nam! Repudiandae, provident iste consequatur hic dignissimos
-          ratione ea quae.
+          We provide comprehensive renting and selling services, 
+          making the process smooth and hassle-free for you.
         </p>
       </div>
     </div>
