--- a/main/templates/listings.html
+++ b/main/templates/listings.html
@@ -6,8 +6,7 @@ Browse Listings {% endblock title %} {% block content %}
       <div class="col-md-12">
         <h1 class="display-4">Browse Our Properties</h1>
         <p class="lead">
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sunt,
-          pariatur!
+          Discover a wide range of properties that suit your needs and preferences.
         </p>
       </div>
     </div>
