--- a/main/templates/about_us.html
+++ b/main/templates/about_us.html
@@ -6,18 +6,16 @@ About Us
   <div class="container">
     <div class="row">
       <div class="col-md-8">
-        <h2>We Search For The Perfect Home</h2>
+        <h2>Finding Your Dream Home</h2>
         <p class="lead">
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sunt,
-          pariatur!
+          We are dedicated to helping you find the perfect home that meets all your needs and desires.
         </p>
         <img src="{% static 'img/about.jpg' %}" alt="About Us Image" />
         <p class="mt-4">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis
-          esse officia repudiandae ad saepe ex, amet neque quod accusamus rem
-          quia magnam magni dolorum facilis ullam minima perferendis?
-          Exercitationem at quaerat commodi id libero eveniet harum perferendis
-          laborum molestias quia.
+          Our team of experienced realtors is committed to providing exceptional 
+          service and ensuring a smooth home-buying process. We understand that 
+          buying a home is a significant investment, and we are here to guide 
+          you every step of the way.
         </p>
       </div>
       <div class="col-md-4">
@@ -32,8 +30,9 @@ About Us
             <h5 class="card-title">Seller Of The Month</h5>
             <h6 class="text-secondary">{{ realtor.name }}</h6>
             <p class="card-text">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis
-              nesciunt amet, illo itaque similique repellat.
+              Congratulations to our top-performing realtor, {{ realtor.name }}. 
+              With exceptional dedication and outstanding results, {{ realtor.name }} is our 
+              Realtor of the Month.
             </p>
           </div>
         </div>
@@ -47,8 +46,8 @@ About Us
 <section id="work" class="bg-dark text-white text-center">
   <h2 class="display-4">We Work For You</h2>
   <h4>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem velit
-    aperiam, unde aliquid at similique!
+    Our team works tirelessly to ensure you find the home of your dreams. 
+    We are here to make the home-buying experience seamless and enjoyable.
   </h4>
   <hr />
   <a href="{% url 'listings' %}" class="btn btn-secondary text-white btn-lg">
@@ -77,7 +76,7 @@ About Us
         <p><i class="fas fa-envelope-open"></i> {{ person.email }}</p>
       </div>
       {% endfor %} {% else %}
-      <p class="text-center">No team members available at the moment.</p>
+      <p class="text-center">Our team is currently unavailable. Please check back soon.</p>
       {% endif %}
     </div>
   </div>
